<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/pricipal" />
        <item
            android:id="@+id/nav_hotel"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/hoteles" />
        <item
            android:id="@+id/nav_restaurante"
            android:icon="@drawable/ic_local_dining_black_24dp"
            android:title="@string/restaurantes" />
        <item
            android:id="@+id/nav_bar"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/bares" />
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/cerrarSesion" />

    </group>

</menu>