<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ktdie.sanantoniodepereira.HotelDosFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hotelDos"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="normal|italic" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:src="@drawable/hotel_2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hotelDosInfo"
        android:textColor="@color/black"
        android:layout_margin="4dp"
        android:textAlignment="center" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hotelDosTel"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hotelDosPrecio"
        android:textColor="@color/black"/>

</LinearLayout>
