<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="90dp">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/hotel_1"
        android:layout_margin="10dp"
        android:id="@+id/iPhoto"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotelUno"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:id="@+id/tName"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotelUnoTel"
            android:id="@+id/tDescrip"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotelUnoPrecio"
            android:id="@+id/tPrecio"/>

    </LinearLayout>

</LinearLayout>